still trying to fix spacing on portfolio page

--- a/homework/02-homework/style.css
+++ b/homework/02-homework/style.css
@@ -106,7 +106,7 @@ a {
 
 #portfolio-card {
     margin-top: 20px;
-    padding-left: 7%;
+    padding-left: 6%;
 }
 
 .floater {
